deploy/kube-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    service: app
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        forceRedeployUniqId: "$UNIQ_ID"
      labels:
        service: app
    spec:
      containers:
      - image: containers101/demochat:$DOCKER_IMAGE_TAG
        name: app
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
