deploy/kube-mongo.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.codefresh.owner: codefresh
  labels:
    service: mongo
  name: mongo
spec:
  ports:
  - name: "mongodb"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: mongo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    io.codefresh.owner: codefresh
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: mongo
    spec:
      containers:
      - args:
        - mongod
        - --smallfiles
        image: mongo:latest
        name: mongo
        ports:
        - containerPort: 27017
          protocol: TCP
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
      restartPolicy: Always
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-volume-claim
