deploy/all.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-chat
  labels:
    service: demo-chat
    app: demo-chat
spec:
  replicas: 2
  template:
    metadata:
      labels:
        service: demo-chat
    spec:
      imagePullSecrets:
        - name: cfcr
      containers:
      - image: containers101/demochat:master
        name: app
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: demochat-ingress
  spec:
    backend:
      serviceName: demochat-board
      servicePort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: demochat-master
  spec:
    type: NodePort
    selector:
      app: demo-chat
    ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      service: demochat-board
