deploy/kube-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    service: app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demochat-ingress
spec:
  backend:
    serviceName: app
    servicePort: 80
